# vstudio-metabuild

./: .gitignore  README.md  package.json  tsconfig.json
contract/: .gitignore  README.md  package.json
contract-archive/: README.md  package.json
contract/contract/: Cargo.toml  deploy.sh
contract/contract/src/: lib.rs
contract/contract/tests/: create_communities.js  test.js
frontend-demo/: .firebaserc  .gitignore  README.md  firebase.json  index.js  next.config.mjs  package.json  tailwind.config.js
frontend-demo/src/: constants.ts
frontend-demo/src/components/Footer/: index.module.scss  index.tsx
frontend-demo/src/components/Header/: index.module.scss  index.tsx
frontend-demo/src/components/Layout/: index.module.scss  index.tsx
frontend-demo/src/components/Modal/: index.tsx
frontend-demo/src/contexts/: WalletSelectorContext.tsx
frontend-demo/src/data/: index.ts  interfaces.ts
frontend-demo/src/pages/: _app.tsx  _error.tsx  create.tsx  index.module.scss  index.tsx
frontend-demo/src/pages/api/: checkin.ts
frontend-demo/src/pages/communities/: [communityId].tsx  index.tsx
frontend-demo/src/pages/communities/[communityId]/: join.tsx
frontend-demo/src/pages/communities/[communityId]/claimbadge/: error.tsx  index.tsx  success.tsx
frontend-demo/src/styles/: globals.scss
frontend-demo/src/utils/: index.ts
shared-utils/: Cargo.toml  LICENSE_MIT
shared-utils/pkg/: README.md  package.json  shared_utils.d.ts  shared_utils.js  shared_utils_bg.js  shared_utils_bg.wasm  shared_utils_bg.wasm.d.ts
shared-utils/src/: gadget_mimc.rs  gadget_set_membership.rs  lib.rs  r1cs_utils.rs  utils.rs
shared-utils/tests/: web.rs
